[FEATURE] add favicon and a little gift

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<title>Club Design</title>
 		<meta charset="utf-8" />
 
+		<link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32">
+
 		<link rel="stylesheet" href="css/index.css">
 	</head>
 
@@ -216,12 +218,14 @@
 			<section name="contact">
 				<h2>Find us</h2>
 
-				<div class="map"></div>
+				<div class="map">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.9560150255584!2d-73.9700547843288!3d40.76299214243068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x410bd0c17a6bab13!2sZara!5e0!3m2!1sfr!2sfr!4v1457617737541" height="600" frameborder="0" style="border:0;display:block;width:100%;pointer-events: none;" allowfullscreen></iframe>
+				</div>
 			</section>
 		</main>
 
 		<footer>
-			
+
 			<div class="logo_footer">
 				<img src="img/logo.svg" alt="">
 				<p>Club Design</p>
@@ -249,7 +253,112 @@
 			<div>
 				<h3>Keep in touch</h3>
 
-				<form action="">
+				<div class="plane">
+				    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+					 width="89.87px" height="34.306px" viewBox="0 0 89.87 34.306" enable-background="new 0 0 89.87 34.306" xml:space="preserve">
+						<g>
+					<g>
+						<path fill="#939498" d="M86,16.004c0,0,1.348-0.071,1.95-0.199c1.252-0.267,1.92-0.774,1.92-1.356c0-0.578-0.576-1.084-1.83-1.352
+							C87.44,12.971,86,12.9,86,12.9V16.004z"/>
+					</g>
+					<g>
+						<path fill="#750F05" d="M83.832,19.73c1.302-0.857,1.95-2.047,1.95-5.282c0-3.232-0.646-4.23-1.943-5.088L83.832,19.73z"/>
+					</g>
+					<g>
+						<path fill="#270502" d="M85.782,14.448c0-3.232-0.646-4.23-1.943-5.088"/>
+					</g>
+					<g>
+						<path fill="#9C1407" d="M47.988,9.195l0.554,1.111c0.556,1.199,2.405,1.903,3.813,1.903c1.766,0,4.645-1.409,4.645-3.101V9.086
+							c0,0,21.688-0.374,23.025,0.968c0.871,0.864,1.975,1.16,1.975,1.16v9.771c0-1.248-2.666-0.865-2.666-0.865
+							s-4.311,3.253-8.758,3.253l-2.303,1.539c0,0,2.244,0-17.381,0c-13.798-1-31.657-3.535-41.869-4.902l-0.036-0.367
+							c-0.037,0.429-0.399,0.59-0.839,0.59c-0.472,0-0.853-0.47-0.853-0.937c0-0.057,0.007-0.154,0.016-0.205l-0.041-0.023
+							c-3.356-0.487-4.948-0.933-5.556-1.288C0.842,17.778,0,17.618,0,14.703c0-2.918,0-2.604,0-11.669
+							c0-9.071,18.148,4.387,18.148,11.763"/>
+						<path fill="#57130D" d="M0.847,4.422c0-9.068,15.989,2.898,15.989,10.274c0,0,0.681-1.885-6.37-8.938
+							C4.639-0.067,0.847,4.422,0.847,4.422z"/>
+					</g>
+					<g>
+						<path fill="#57130D" d="M18.227,15.241l29.762-5.596l0.554,1.107c0.556,1.2,2.405,1.907,3.813,1.907
+							c1.766,0,4.645-1.413,4.645-3.103V9.535c0,0,21.393-0.373,22.732,0.966c0.865,0.863,1.825,1.189,1.825,1.189"/>
+						<path fill="#57130D" d="M18.227,15.241"/>
+					</g>
+					<g>
+						<rect x="16.319" y="20.224" fill="#999999" width="0" height="1.929"/>
+					</g>
+					<g>
+						
+							<rect x="14.776" y="21.235" transform="matrix(-0.7083 -0.7059 0.7059 -0.7083 10.3762 48.4227)" fill="#999999" width="0.836" height="1.666"/>
+					</g>
+					<g>
+						<path fill="#1A1A1A" d="M64.646,31.387c0,1.616,1.308,2.919,2.919,2.919c1.612,0,2.918-1.303,2.918-2.919
+							c0-1.609-1.306-2.915-2.918-2.915C65.953,28.472,64.646,29.777,64.646,31.387z"/>
+					</g>
+					<g>
+						<path fill="#8F8F8F" d="M61.021,30.347c0,0-1.3,1.424,6.544,1.424c2.182,0,4.67,0.646,4.67-0.752c0-2.623-2.128-5.424-4.75-5.424
+							S62.527,27.302,61.021,30.347z"/>
+					</g>
+					<g>
+						<polygon fill="#737373" points="62.227,28.423 62.813,27.834 57.668,22.681 57.079,23.273 		"/>
+					</g>
+					<g>
+						<path fill="#737373" d="M69.938,25.611c2.361,0,3.062,1.041,3.062,1.041s0-2.168,0-4.447C73,19.931,70.066,25.565,69.938,25.611z"
+							/>
+					</g>
+					<g>
+						<path fill="#270502" d="M69.302,21.238c0.044,0,0.084-0.014,0.116-0.042c0.062-0.06,0.054-0.146-0.007-0.2L51.004,5.797
+							c-0.065-0.052-0.159-0.05-0.226,0.006c-0.054,0.052-0.05,0.141,0.01,0.195L69.194,21.2C69.224,21.226,69.266,21.238,69.302,21.238
+							z"/>
+					</g>
+					<g>
+						<path fill="#270502" d="M68.09,4.513c0.042-0.006,0.088,0.004,0.122,0.024c0.063,0.05,0.071,0.136,0.02,0.197L52.211,22.432
+							c-0.059,0.06-0.155,0.07-0.222,0.026c-0.064-0.051-0.077-0.135-0.019-0.196L67.989,4.563C68.018,4.535,68.052,4.519,68.09,4.513z"
+							/>
+					</g>
+					<g>
+						<polygon fill="#270502" points="4,18.921 4,18.921 5.895,9.433 12.183,6.073 11.112,5.845 4,9.29 		"/>
+					</g>
+					<g>
+						<path fill="#333333" d="M85.776,14.981C85.776,3.169,88,0.253,88,0.253v14.729v14.59C88,29.571,85.776,26.789,85.776,14.981z"/>
+					</g>
+					<g>
+						<path fill="#1A1A1A" d="M13.289,22.646c0,0.768,0.622,1.392,1.393,1.392c0.765,0,1.383-0.624,1.383-1.392
+							c0-0.767-0.618-1.39-1.383-1.39C13.911,21.256,13.289,21.879,13.289,22.646z"/>
+					</g>
+					<g>
+						<circle fill="#737373" cx="14.681" cy="22.646" r="0.417"/>
+					</g>
+					<g>
+						<path fill="#57130D" d="M0,15.188c0,0,3.614,0.771,8.073,0.771c4.457,0,8.066-0.348,8.066-0.771c0-0.428-3.609-0.771-8.066-0.771
+							C3.614,14.417,0,15.188,0,15.188z"/>
+					</g>
+					<g>
+						<path fill="#270502" d="M0,15.188c0,0,3.614,0.771,8.073,0.771c4.457,0,8.066-0.348,8.066-0.771"/>
+					</g>
+					<g>
+						<path fill="#270502" d="M48.148,5.531c0,0,4.75,1.427,10.548,1.242c5.801-0.181,10.48-1.032,10.452-1.897
+							c-0.026-0.875-4.751-1.43-10.55-1.248C52.799,3.813,48.148,5.531,48.148,5.531z"/>
+					</g>
+					<g>
+						<path fill="#57130D" d="M69.148,4.876c-0.026-0.875-4.751-1.43-10.55-1.248c-5.8,0.186-10.45,1.903-10.45,1.903"/>
+					</g>
+					<g>
+						<path fill="#270502" d="M50.405,22.744c0,0,4.814,1.18,10.596,0.702c5.783-0.48,10.414-1.572,10.34-2.438
+							c-0.072-0.867-4.817-1.179-10.6-0.701C54.958,20.783,50.405,22.744,50.405,22.744z"/>
+					</g>
+					<g>
+						<path fill="#57130D" d="M71.341,21.008c-0.072-0.867-4.817-1.179-10.6-0.701c-5.783,0.477-10.336,2.438-10.336,2.438"/>
+					</g>
+					<g>
+						<rect x="82" y="6.911" fill="#9C1407" width="4" height="15"/>
+					</g>
+					<g>
+						<polyline fill="#57130D" points="86,7.911 86,6.911 82,6.911 		"/>
+					</g>
+						</g>
+					</svg>
+				</div>
+  
+				<form action="" method="post">
 
 					<div class="style_input">
 						<label for="name">Your Name</label>
