[FIX] set font sizes from type jpg file

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 			</div>
 
 			<nav>
-				<a href="" class="submenu">The technology</a>
-				<a href="">Partners</a>
-				<a href="">Company</a>
-				<a href="">Contact</a>
-				<a href="">Sign in</a>
+				<a href="#" class="submenu">The technology</a>
+				<a href="#">Partners</a>
+				<a href="#">Company</a>
+				<a href="#">Contact</a>
+				<a href="#">Sign in</a>
 			</nav>
 		</header>
 
