--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
 			</div>
 
 			<nav>
-				<a href="#" class="submenu">The technology</a>
+				<li class="submenu"><span>The technology</span>
+					<ul>
+						<li><a href="#">Rocking chair</a></li>
+						<li><a href="#">Watchman's chair</a></li>
+						<li><a href="#">Windsor chair</a></li>
+						<li><a href="#">Winback chair</a></li>
+					</ul>
+				</li>
 				<a href="#">Partners</a>
 				<a href="#">Company</a>
 				<a href="#">Contact</a>
