make lightbox and add css responsive a bit

--- a/index.html
+++ b/index.html
@@ -231,6 +231,11 @@
 			</section>
 		</main>
 
+		<div class="lightbox">
+			<div class="close_lightbox">X</div>
+			<div class="picture"></div>
+		</div>
+
 		<footer>
 
 			<div class="logo_footer">
