--- a/index.html
+++ b/index.html
@@ -260,6 +260,29 @@
 			<div>
 				<h3>Follow us</h3>
 
+				<ul class="social">
+					<li class="facebook">
+						<a href="#">
+						</a>
+					</li>
+					<li class="twitter">
+						<a href="#">
+						</a>
+					</li>
+					<li class="tumblr">
+						<a href="#">
+						</a>
+					</li>
+					<li class="pinterest">
+						<a href="#">
+						</a>
+					</li>
+					<li class="instagram">
+						<a href="#">
+						</a>
+					</li>
+				</ul>
+
 			</div>
 
 			<div>
